lots of styling

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -38,8 +38,9 @@
         	{{ partial "counters.html" .}}
         {{ end }}
 
-        {{ partial "organizer.html" .}}
-
+        {{ if .Site.Params.organizer.enable }}
+            {{ partial "organizer.html" .}}
+        {{ end }}
 
 		{{ if .Site.Params.contact.enable }}
         	{{ partial "contact.html" .}}
