itro grid layouted

--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -15,7 +15,7 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-			<div class="col to-animate ">
+			<div class="col-12 col-md-6 to-animate ">
                 {{ with .Site.GetPage "page" "references/ruvido.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -23,13 +23,13 @@
 		</div>
 		 					 
 		<div class="row row-bottom-padded-lg intro-items">
-            <div class="col to-animate b2berne">
-                {{ with .Site.GetPage "page" "references/b2berne.md" }}
+			<div class="col-12 col-md-7 to-animate ">
+                {{ with .Site.GetPage "page" "references/award-marketing-architektur.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-			<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/award-marketing-architektur.md" }}
+            <div class="col to-animate b2berne">
+                {{ with .Site.GetPage "page" "references/b2berne.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -42,7 +42,7 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-           	<div class="col-8 to-animate ">
+           	<div class="colcol-12 col-md-8 to-animate ">
                 {{ with .Site.GetPage "page" "references/o-maeder-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -50,12 +50,13 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-            <div class="col to-animate ">
-				{{ with .Site.GetPage "page" "references/contria-workware.md" }}
+         
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-postcard.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
-			</div>
-            <div class="col to-animate ">
+            </div>
+            <div class="col-12 col-md-6 to-animate ">
                  {{ with .Site.GetPage "page" "references/building-award.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -63,18 +64,17 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+		   <div class="col to-animate ">
+				{{ with .Site.GetPage "page" "references/contria-workware.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+			</div>
+			<div class="col-12 col-md-4 to-animate ">
 				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-			<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-postcard.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-
-			<div class="col to-animate ">
+			<div class="col-12 col-md-4 to-animate ">
                 {{ with .Site.GetPage "page" "references/lebana-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -88,7 +88,7 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col-5 to-animate ">
+            <div class="col-12 col-md-5 to-animate ">
                 {{ with .Site.GetPage "page" "references/building-award2.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -97,7 +97,7 @@
 	
 		<div class="row row-bottom-padded-lg intro-items">
 			
-            	<div class="col to-animate ">
+            	<div class="col-12 col-md-4  to-animate ">
                 {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -115,7 +115,7 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-	       <div class="col to-animate ">
+	       <div class="col-12 col-md-6 to-animate ">
                 {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -131,12 +131,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 
-            <div class="col to-animate ">
+            <div class="col-12 col-md-4 to-animate ">
                 {{ with .Site.GetPage "page" "references/usbsticks.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col-8 to-animate ">
+            <div class="col to-animate ">
                 {{ with .Site.GetPage "page" "references/bijoux-stadelmann-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
