--- a/static/css/bkmi.css
+++ b/static/css/bkmi.css
@@ -79,11 +79,7 @@
 }
 
 
-#fh5co-intro .intro-items>div {
-    display: flex;
-    margin: 0 1px 1px 0;
-    height: 15em;
-}
+
 
 
 #fh5co-intro .intro-items .popup-modal {
@@ -108,11 +104,15 @@
 #fh5co-intro .container .row.intro-items {
     width: 100%;
     margin: 0px 0px 0 0px;
-    padding: 0 3px 0 3px;
+    padding: 0 0px 0px 3px;
     overflow: hidden;
 }
 
-
+#fh5co-intro .intro-items>div {
+    display: flex;
+    margin: 0 3px 3px 0px;
+    height: 15em;
+}
 
 .b2berne .popup-modal {
     background-size: 90%!important;
@@ -210,7 +210,7 @@
 
 
 .white-popup-block .title-only {
-    font-size: 1.6em;
+    font-size: 1.2em;
 }
 
 
@@ -289,4 +289,8 @@
         
    
     
+}
+
+.white-popup-block .content-block strong {
+    font-weight: bold;
 }
