--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,5 +52,15 @@
         {{ end }}
 
         {{ partial "js.html" .}}
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120567213-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'UA-120567213-1');
+        </script>
     </body>
 </html>
