--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -12,7 +12,7 @@
 			</div>
 			<div class="row">
 			{{ range .Site.Params.about.item }}
-				<div class="col-md-4">
+				<div class="col-12 col-lg-4 col-md-6 col-sm-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="{{ .img }}" alt="{{ .alt }}"></figure>
 						<h3>{{ .name | markdownify }}</h3>
