changes on references styling

--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -11,7 +11,7 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		    <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/stuecheli-architekten-jahrbuch.md" }}
+                {{ with .Site.GetPage "page" "references/maeder-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -33,16 +33,15 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-           
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col-12 col-md-4 to-animate ">
 				{{ with .Site.GetPage "page" "references/grafikdesign.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-           	<div class="colcol-12 col-md-8 to-animate ">
+           	<div class="col to-animate ">
                 {{ with .Site.GetPage "page" "references/o-maeder-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -50,13 +49,12 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-         
-			<div class="col to-animate ">
+			<div class="col-12 col-md-6 to-animate ">
                 {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-postcard.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col-12 col-md-6 to-animate ">
+            <div class="col to-animate ">
                  {{ with .Site.GetPage "page" "references/building-award.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -69,26 +67,25 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-			<div class="col-12 col-md-4 to-animate ">
+			<div class="col col-12 col-md-4 to-animate ">
 				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-			<div class="col-12 col-md-4 to-animate ">
+			<div class="col col-12 col-md-4 to-animate ">
                 {{ with .Site.GetPage "page" "references/lebana-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-		    <div class="col to-animate ">
+		    <div class="col-12  col-md-7 to-animate ">
                 {{ with .Site.GetPage "page" "references/bijoux-stadelmann-inserat.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col-12 col-md-5 to-animate ">
+            <div class="col to-animate ">
                 {{ with .Site.GetPage "page" "references/building-award2.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -96,7 +93,6 @@
 		</div>
 	
 		<div class="row row-bottom-padded-lg intro-items">
-			
             	<div class="col-12 col-md-4  to-animate ">
                 {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-workware.md" }}
                     {{ partial "intro.html" .}}
@@ -115,24 +111,8 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-	       <div class="col-12 col-md-6 to-animate ">
-                {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-            <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/garage-hofmann-werbeartikel.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-
-		</div>
-		
-		
-		<div class="row row-bottom-padded-lg intro-items">
-
-            <div class="col-12 col-md-4 to-animate ">
-                {{ with .Site.GetPage "page" "references/usbsticks.md" }}
+            <div class="col-12 col-md-5 to-animate ">
+                {{ with .Site.GetPage "page" "references/stuecheli-architekten-jahrbuch.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -142,11 +122,24 @@
                 {{ end }}
             </div>
 		</div>
-
-
-	
-
-
+		
+		<div class="row row-bottom-padded-lg intro-items">
+	       <div class="col-12 col-md-4 to-animate ">
+                {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/usbsticks.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/garage-hofmann-werbeartikel.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
 	
 	</div>
 </section>
