--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,6 +15,8 @@
         
 		{{ partial "hero.html" .}}
 		
+	    {{ partial "campaign.html" .}}
+		
 		
         {{ partial "introsection.html" .}}
 
