--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -8,8 +8,34 @@
 		</div>
 	</div>
 </a>
-<div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide container">	
+<div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide container">
+		
+{{ if .Params.carousel }}
+<div class="carouselExampleControls carousel slide lazy" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+  	<div class="carousel-item active">
+      <img class="d-block w-100 " src="{{ .Params.img }}">
+    </div>
+  	{{ range .Params.carousel }}
+    <div class="carousel-item">
+      <img class="d-block w-100 " src="img/blank.gif" data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
+    </div>
+    {{ end }}
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+{{ else }}
 			<img src="{{ .Params.img }}" />
+{{ end }}
 			<div class="content-block">
 				{{ if (not (isset .Params "content")) | or (eq .Params.content "") }}
 					<div class="title-only">
