--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,23 +1,50 @@
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<!--<script src="js/bootstrap.min.js"></script>-->
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Stellar Parallax -->
-	<script src="js/jquery.stellar.min.js"></script>
-	<!-- Counter -->
-	<script src="js/jquery.countTo.js"></script>
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<!-- Google Map -->
-	{{ if .Site.Params.contact.google_api_map }}
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
-	{{ end }}
-	<!-- Main JavaScript -->
-	<script src="js/main.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<!--<script src="js/bootstrap.min.js"></script>-->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Stellar Parallax -->
+<script src="js/jquery.stellar.min.js"></script>
+<!-- Counter -->
+<script src="js/jquery.countTo.js"></script>
+
+<!-- Magnific Popup -->
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+<!-- Google Map -->
+{{ if .Site.Params.contact.google_api_map }}
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+<script src="js/google_map.js"></script>
+{{ end }}
+
+<!-- Main Zendeskpluginc -->
+<!--{{ partial "zendesk.html" .}}-->
+
+
+
+<!-- Main JavaScript -->
+<script src="js/main.js"></script>
+
+
+
+<script>
+	$(function() {
+		return $(".carousel.lazy").on("slide.bs.carousel", function(ev) {
+			var lazy;
+			lazy = $(ev.relatedTarget).find("img[data-src]");
+			lazy.attr("src", lazy.data('src'));
+			lazy.removeAttr("data-src");
+		});
+	});
+
+	// $(function() {
+	//     $('.modal').on("shown.bs.modal", function(e) {
+	//         $(this).find('img').renameAttr('data-src', 'src');
+	//     });
+	// });
+</script>
+	
