--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -11,22 +11,22 @@
 <div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide container">
 		
 {{ if .Params.carousel }}
-<div class="carouselExampleControls carousel slide lazy" class="carousel slide" data-ride="carousel">
+<div id='carousel-controls-{{ .Params.content_url }}' class="carousel slide lazy" data-ride="carousel">
   <div class="carousel-inner">
   	<div class="carousel-item active">
       <img class="d-block w-100 " src="{{ .Params.img }}">
     </div>
   	{{ range .Params.carousel }}
     <div class="carousel-item">
-      <img class="d-block w-100 " src="img/blank.gif" data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
+      <img class="d-block w-100 "  data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
     </div>
     {{ end }}
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carousel-controls-{{ .Params.content_url }}" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carousel-controls-{{ .Params.content_url }}" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
