--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -14,11 +14,11 @@
 <div id='carousel-controls-{{ .Params.content_url }}' class="carousel slide lazy" data-ride="carousel">
   <div class="carousel-inner">
   	<div class="carousel-item active">
-      <img class="d-block w-100 " src="{{ .Params.img }}">
+      <img class="d-block img-fluid w-100 " src="{{ .Params.img }}">
     </div>
   	{{ range .Params.carousel }}
     <div class="carousel-item">
-      <img class="d-block w-100 "  data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
+      <img class="d-block img-fluid w-100 "  data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
     </div>
     {{ end }}
   </div>
