--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -18,7 +18,7 @@
     </div>
   	{{ range .Params.carousel }}
     <div class="carousel-item">
-      <img class="d-block img-fluid w-100 "  data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
+      <img class="d-block img-fluid w-100 " src="img/load.gif"  data-src="{{ .imgsrc }}" alt="{{ .imgalt }}">
     </div>
     {{ end }}
   </div>
