single page view

--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -11,12 +11,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		    <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/maeder-event.md" }}
+                {{ with .Site.GetPage "page" "referenzen/maeder-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 			<div class="col-12 col-md-6 to-animate ">
-                {{ with .Site.GetPage "page" "references/ruvido.md" }}
+                {{ with .Site.GetPage "page" "referenzen/ruvido.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -24,56 +24,61 @@
 		 					 
 		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col-12 col-md-7 to-animate ">
-                {{ with .Site.GetPage "page" "references/award-marketing-architektur.md" }}
+                {{ with .Site.GetPage "page" "referenzen/award-marketing-architektur.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate b2berne">
-                {{ with .Site.GetPage "page" "references/b2berne.md" }}
+                {{ with .Site.GetPage "page" "referenzen/b2berne.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 		</div>
 		
+				
+		<div class="row row-bottom-padded-lg intro-items">
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "referenzen/silenthelp.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col-12 col-md-4 to-animate ">
+                {{ with .Site.GetPage "page" "referenzen/praxis-fuer-entspannung-workware.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
+		
 		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col-12 col-md-4 to-animate ">
-				{{ with .Site.GetPage "page" "references/grafikdesign.md" }}
+				{{ with .Site.GetPage "page" "referenzen/grafikdesign.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
            	<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/o-maeder-einladung.md" }}
+                {{ with .Site.GetPage "page" "referenzen/o-maeder-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 		</div>
+
 		
-		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col-12 col-md-6 to-animate ">
-                {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-postcard.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-            <div class="col to-animate ">
-                 {{ with .Site.GetPage "page" "references/building-award.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-		</div>
+
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		   <div class="col to-animate ">
-				{{ with .Site.GetPage "page" "references/contria-workware.md" }}
+				{{ with .Site.GetPage "page" "referenzen/contria-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
 			<div class="col col-12 col-md-4 to-animate ">
-				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
+				{{ with .Site.GetPage "page" "referenzen/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
 			<div class="col col-12 col-md-4 to-animate ">
-                {{ with .Site.GetPage "page" "references/lebana-workware.md" }}
+                {{ with .Site.GetPage "page" "referenzen/lebana-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -81,30 +86,38 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		    <div class="col-12  col-md-7 to-animate ">
-                {{ with .Site.GetPage "page" "references/bijoux-stadelmann-inserat.md" }}
+                {{ with .Site.GetPage "page" "referenzen/bijoux-stadelmann-inserat.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/building-award2.md" }}
+                {{ with .Site.GetPage "page" "referenzen/building-award2.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col-12 col-md-6 to-animate ">
+                {{ with .Site.GetPage "page" "referenzen/praxis-fuer-entspannung-postcard.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                 {{ with .Site.GetPage "page" "referenzen/building-award.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 		</div>
 	
 		<div class="row row-bottom-padded-lg intro-items">
-            	<div class="col-12 col-md-4  to-animate ">
-                {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-workware.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/swiss-sales-einladung.md" }}
+                {{ with .Site.GetPage "page" "referenzen/swiss-sales-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-			<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/soziale-innovation-publikation.md" }}
+			<div class="col-4 to-animate ">
+                {{ with .Site.GetPage "page" "referenzen/soziale-innovation-publikation.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -112,12 +125,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
             <div class="col-12 col-md-5 to-animate ">
-                {{ with .Site.GetPage "page" "references/stuecheli-architekten-jahrbuch.md" }}
+                {{ with .Site.GetPage "page" "referenzen/stuecheli-architekten-jahrbuch.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/bijoux-stadelmann-event.md" }}
+                {{ with .Site.GetPage "page" "referenzen/bijoux-stadelmann-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -125,17 +138,17 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 	       <div class="col-12 col-md-4 to-animate ">
-                {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
+                {{ with .Site.GetPage "page" "referenzen/wuethrich-kies-grafik.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/usbsticks.md" }}
+                {{ with .Site.GetPage "page" "referenzen/usbsticks.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/garage-hofmann-werbeartikel.md" }}
+                {{ with .Site.GetPage "page" "referenzen/garage-hofmann-werbeartikel.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
