--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,40 +1,105 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
-<head>
-	{{ partial "head.html" . }}
-</head>
-<body>
 
-	{{ partial "header.html" . }}
+  <head>
+    {{ partial "head.html" . }}
+  </head>
 
-	<div class="post">
-	  <!-- Wrapper Start -->
-	  <section class="section" style="border: 1px dotted #ddd;">
-	    <div class="container">
-	      <div class="row">
-	        <div>
-	          <div class="block">
-							{{ with .Params.image }}<img src="{{ . | absURL }}" width="100%" alt="post-image"> {{ end }}
-	            <h1>{{ .Params.title }}</h1>
-	            <div class="post-info-wrapper">
-	              <p class="italic">By <span class="bold">{{ .Params.author }}</span> on <span class="bold">{{ .Date.Format .Site.Params.dateFormat }}</span></p>
-	            </div>
-	            <hr />
-	            <p>{{ .Content }}</p>
-	          </div>
-	        </div><!-- .col-md-7 close -->
-	      </div>
-	    </div>
-	  </section>
-	</div>
-	<p class="center-text" style="padding: 30px;">
-	  <a class="btn btn-main" href="{{ $.Site.BaseURL }}/blog">Back to blog</a>
-	</p>
+  <body>
+   <!--{{ partial "nav.html" . }}-->
+    <!--{{ partial "hero.html" . }}-->
+  <section id="bkmi-small-header">
+    <div class="container">
+      <div class="row">
+        <a href="/">
+          <img src="/img/Logo_bmAG_RGB.png">
+        </a>
+      </div>
+    </div>
+  </section>
+    <section id="fh5co-testimonials">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div id="{{ .Params.content_url }}" class="">
+  
+              {{ if .Params.carousel }}
+                <div id='carousel-controls-{{ .Params.content_url }}' class="carousel slide lazy" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block img-fluid w-100 " src="{{ .Params.img | relURL }}">
+                    </div>
+                    {{ range .Params.carousel }}
+                      <div class="carousel-item">
+                        <img class="d-block img-fluid w-100 " src="{{"img/load.gif"| relURL }}" data-src="{{ .imgsrc | relURL }}" alt="{{ .imgalt }}">
+                      </div>
+                    {{ end }}
+                  </div>
+                  <a class="carousel-control-prev" href="#carousel-controls-{{ .Params.content_url }}" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carousel-controls-{{ .Params.content_url }}" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              {{ else }}
+                <img src="{{ .Params.img | relURL }}" /> 
+              {{ end }}
 
-	{{ if and (isset .Site.Params "call") (.Site.Params.call.enable) }}
-		{{ partial "call-to-action.html" . }}
-	{{ end }}
+              </div>
+            </div>
+          </div>
+        <div class="row">
+          <div class="col-md-12 section-heading text-center bkmi-single-title">
+            <h2 class="to-animate">{{ with .Params.title }}{{ . }}{{ end }}</h2>
+            <div class="subtext to-animate">
+              <h3>{{ with .Params.categorie }}{{ . | markdownify }}{{ end }}</h3>
+            </div>
+          </div>
+        </div>
 
-	{{ partial "footer.html" . }}
-</body>
+          <div class="row  justify-content-center">
+            <div class="col-md-7  ">
+              {{ if (not (isset .Params "content")) | or (eq .Params.content "") }}
+                <div class="title-only">
+                  <p><strong>{{ .Params.title }}</strong></p>
+                </div>
+                {{ else }} 
+                  {{with .Content}} {{ . | safeHTML }} 
+                {{end}} 
+              {{ end }}
+            </div>
+            <div class="col-md-7 justify-content-center ">
+              <p class="center-text" style="padding: 30px;">
+                <a class="btn btn-main" href="{{ $.Site.BaseURL }}">Zurück zu Baukoma-Marketimpact.ch</a>
+              </p>
+            </div>
+          </div>
+
+      </div>
+    </section>
+  
+
+  
+    {{ if and (isset .Site.Params "call") (.Site.Params.call.enable) }} 
+      {{ partial "call-to-action.html" . }} 
+    {{ end }}
+  
+    <!-- Contact -->
+    {{ partial "contact.html" . }}
+  
+    <!-- Footer -->
+    <!--{{ partial "footer.html" . }}-->
+  
+    <!-- JS -->
+    {{ partial "js.html" . }}
+  
+  </body>
+
 </html>
