--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-            {{ partial "nav.html" .}}
+            <!--{{ partial "nav.html" .}}-->
 
         
 		{{ partial "hero.html" .}}
