--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,4 +1,4 @@
-	<section id="fh5co-home" data-section="home" style="background-image: url({{ .Site.Params.hero.background }});" data-stellar-background-ratio="0.5">
+	<section id="fh5co-home" data-section="home" style="background-image: url({{ .Site.Params.hero.background | relURL  }});" data-stellar-background-ratio="0.5">
 		
 			
 		<div class="gradient"></div>
@@ -7,7 +7,8 @@
 				<div class="text-inner">
 					<div class="row">
 						<div class="col col-md-8 col-md-offset-2 logo">
-							<h1 class="to-animate">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</h1>
+							<h1 class="to-animate"><div class="bkmi"><img src="{{  .Site.Params.hero.image | relURL  }}" ></div></h1>
+							<!--<h1 class="to-animate">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</h1>-->
 							<h2 class="to-animate">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}</h2>
 						</div>
 					</div>
