--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -38,7 +38,7 @@
 				
 		<div class="row row-bottom-padded-lg intro-items">
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/silenthelp.md" }}
+                {{ with .Site.GetPage "page" "referenzen/silenthelp-teaser.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
