--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
         
 		{{ partial "hero.html" .}}
 		
-	    {{ partial "campaign.html" .}}
+	    <!--{{ partial "campaign.html" .}}-->
 		
 		
         {{ partial "introsection.html" .}}
